// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors utilities createCSSCapsizeTextStyle should create a valid CSS typography object 1`] = `
Object {
  "capHeight": "55",
  "capsize": Object {
    "::after": Object {
      "content": "''",
      "display": "table",
      "marginTop": "-0.1256em",
    },
    "::before": Object {
      "content": "''",
      "display": "table",
      "marginBottom": "-0.1256em",
    },
    "fontSize": "75.625px",
    "lineHeight": "74px",
  },
  "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
  "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
  "fontSize": "",
  "fontStyle": undefined,
  "fontWeight": "400",
  "letterSpacing": "0px",
  "lineGap": "19",
  "textDecoration": undefined,
  "textTransform": undefined,
}
`;

exports[`colors utilities getCSSTextStyles should retrieve valid text styles 1`] = `
Object {
  "::after": Object {
    "content": "''",
    "display": "table",
    "marginTop": "-0.25em",
  },
  "::before": Object {
    "content": "''",
    "display": "table",
    "marginBottom": "-0.25em",
  },
  "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
  "fontSize": "36px",
  "fontStyle": undefined,
  "fontWeight": "700",
  "letterSpacing": "-0.03em",
  "lineHeight": "44.1818px",
  "textDecoration": undefined,
  "textTransform": undefined,
}
`;

exports[`colors utilities getCSSTypography should create a valid CSS typography object 1`] = `
Object {
  "fonts": Object {
    "monospace": "Source Sans Pro,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,\\"Liberation Mono\\",\\"Courier New\\",monospace",
    "sans": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
    "sansAlternate": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
    "serif": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "var": Object {
      "monospace": "--font-family-serif",
      "sans": "--font-family-monospace",
      "sansAlternate": "--font-family-sans",
      "serif": "--font-family-sans-alternate",
    },
    "varNames": Object {
      "monospace": "var(--font-family-serif)",
      "sans": "var(--font-family-monospace)",
      "sansAlternate": "var(--font-family-sans)",
      "serif": "var(--font-family-sans-alternate)",
    },
  },
  "headings": Object {
    "desktop": Object {
      "h1": Object {
        "capHeight": "26.1818",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.25em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.25em",
          },
          "fontSize": "36px",
          "lineHeight": "44.1818px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "36",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.03em",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h2": Object {
        "capHeight": "20.3636",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2857em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2857em",
          },
          "fontSize": "28px",
          "lineHeight": "36.3636px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "28",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.02em",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h3": Object {
        "capHeight": "14.5455",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.35em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.35em",
          },
          "fontSize": "20px",
          "lineHeight": "28.5455px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "20",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h4": Object {
        "capHeight": "11.6364",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4375em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4375em",
          },
          "fontSize": "16px",
          "lineHeight": "25.6364px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "h1": Object {
        "capHeight": "26",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2797em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2797em",
          },
          "fontSize": "35.75px",
          "lineHeight": "46px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.03em",
        "lineGap": "20",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h2": Object {
        "capHeight": "20",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3273em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3273em",
          },
          "fontSize": "27.5px",
          "lineHeight": "38px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.02em",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h3": Object {
        "capHeight": "16",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "22px",
          "lineHeight": "32px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h4": Object {
        "capHeight": "14",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "19.25px",
          "lineHeight": "28px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "tablet": Object {
      "h1": Object {
        "capHeight": "26",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2797em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2797em",
          },
          "fontSize": "35.75px",
          "lineHeight": "46px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.03em",
        "lineGap": "20",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h2": Object {
        "capHeight": "20",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3273em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3273em",
          },
          "fontSize": "27.5px",
          "lineHeight": "38px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.02em",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h3": Object {
        "capHeight": "16",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "22px",
          "lineHeight": "32px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h4": Object {
        "capHeight": "14",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "19.25px",
          "lineHeight": "28px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
  "labels": Object {
    "desktop": Object {
      "medium": Object {
        "capHeight": "10.9091",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4em",
          },
          "fontSize": "15px",
          "lineHeight": "22.9091px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "15",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "10.1818",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4286em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4286em",
          },
          "fontSize": "14px",
          "lineHeight": "22.1818px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.7273",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5em",
          },
          "fontSize": "12px",
          "lineHeight": "20.7273px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "medium": Object {
        "capHeight": "13.0909",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3333em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3333em",
          },
          "fontSize": "18px",
          "lineHeight": "25.0909px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "11.6364",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.375em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.375em",
          },
          "fontSize": "16px",
          "lineHeight": "23.6364px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.7273",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5em",
          },
          "fontSize": "12px",
          "lineHeight": "20.7273px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "styles": Object {
      "bold": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "boldUppercase": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0.06em",
        "textDecoration": undefined,
        "textTransform": "uppercase",
      },
      "uppercase": Object {
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0.06em",
        "textDecoration": undefined,
        "textTransform": "uppercase",
      },
    },
    "tablet": Object {
      "medium": Object {
        "capHeight": "12.3636",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3529em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3529em",
          },
          "fontSize": "17px",
          "lineHeight": "24.3636px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "17",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "10.9091",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4em",
          },
          "fontSize": "15px",
          "lineHeight": "22.9091px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "15",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5455em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5455em",
          },
          "fontSize": "11px",
          "lineHeight": "20px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "11",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
  "paragraphs": Object {
    "desktop": Object {
      "large": Object {
        "capHeight": "13.0909",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5em",
          },
          "fontSize": "18px",
          "lineHeight": "31.0909px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "medium": Object {
        "capHeight": "11.6364",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5em",
          },
          "fontSize": "16px",
          "lineHeight": "27.6364px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "10.1818",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5em",
          },
          "fontSize": "14px",
          "lineHeight": "24.1818px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.7273",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5em",
          },
          "fontSize": "12px",
          "lineHeight": "20.7273px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "large": Object {
        "capHeight": "13.0909",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4444em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4444em",
          },
          "fontSize": "18px",
          "lineHeight": "29.0909px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "medium": Object {
        "capHeight": "11.6364",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4375em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4375em",
          },
          "fontSize": "16px",
          "lineHeight": "25.6364px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "10.1818",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4286em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4286em",
          },
          "fontSize": "14px",
          "lineHeight": "22.1818px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.7273",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4167em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4167em",
          },
          "fontSize": "12px",
          "lineHeight": "18.7273px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "10",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "styles": Object {
      "bold": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "italic": Object {
        "fontStyle": "italic",
        "fontWeight": "400",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "tablet": Object {
      "large": Object {
        "capHeight": "13.0909",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4444em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4444em",
          },
          "fontSize": "18px",
          "lineHeight": "29.0909px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "medium": Object {
        "capHeight": "11.6364",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4375em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4375em",
          },
          "fontSize": "16px",
          "lineHeight": "25.6364px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "10.1818",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4286em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4286em",
          },
          "fontSize": "14px",
          "lineHeight": "22.1818px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.7273",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4167em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4167em",
          },
          "fontSize": "12px",
          "lineHeight": "18.7273px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "10",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
  "titles": Object {
    "desktop": Object {
      "t1": Object {
        "capHeight": "42",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3485em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4015em",
          },
          "fontSize": "60px",
          "lineHeight": "87px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "45",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "t2": Object {
        "capHeight": "36",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2846em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3376em",
          },
          "fontSize": "51.4286px",
          "lineHeight": "68px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "32",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "t1": Object {
        "capHeight": "34",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2206em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2736em",
          },
          "fontSize": "48.5714px",
          "lineHeight": "58px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "24",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "t2": Object {
        "capHeight": "28",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2485em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3015em",
          },
          "fontSize": "40px",
          "lineHeight": "50px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "22",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "tablet": Object {
      "t1": Object {
        "capHeight": "38",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2314em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2844em",
          },
          "fontSize": "54.2857px",
          "lineHeight": "66px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "28",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "t2": Object {
        "capHeight": "32",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2579em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3109em",
          },
          "fontSize": "45.7143px",
          "lineHeight": "58px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "26",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
}
`;
